# rust-primecheck

./: Cargo.toml  README.md  build.sh  index.html
doc/doc/prime_check/: all.html  fn.modpow.html  fn.prime_check.html  index.html  sidebar-items.js
doc/doc/src/prime_check/: lib.rs.html
doc/pkg/: prime_check.d.ts  prime_check_bg.wasm
docs/: index.html  primecheck.bench.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/prime_check/: all.html  fn.modpow.html  fn.prime_check.html  fn.rng_gen_range.html  fn.rng_gen_range2.html  fn.rng_gen_range_crypto.html  index.html  sidebar-items.js
docs/doc/src/prime_check/: lib.rs.html
docs/pkg/: prime_check.d.ts  prime_check.js  prime_check_bg.d.ts  prime_check_bg.wasm
src/: lib.rs  main.rs
